# duid-app

./: .gitignore  Cargo.toml  README.md
binuid/: Cargo.toml  README.md
binuid/src/: lib.rs  main.rs
binuid/src/ast/: mod.rs  module.rs
binuid/src/ast/expressions/: binary_expr.rs  mod.rs  op_expr.rs  unary_expr.rs  with_block.rs  without_block.rs
binuid/src/ast/items/: mod.rs  struct_item.rs
binuid/src/compiler/: bytecode.rs
binuid/src/grammar_parser/: data.pest  entry_point.pest  expression.pest  items.pest  literals.pest  names.pest  parser.rs  statement.pest
binuid/src/std/: example.bid  primitive.bid
binuid/src/utils/: mod.rs
binuid/src/vm/: data.rs  mod.rs  opcode.rs  vm.rs
binuid/src/vm/operations/: mod.rs  op_add.rs  op_andand.rs  op_bit_and.rs  op_bit_or.rs  op_bit_xor.rs  op_eqeq.rs  op_ge.rs  op_gt.rs  op_le.rs  op_lt.rs  op_minus.rs  op_ne.rs  op_oror.rs  op_output.rs  op_percent.rs  op_push.rs  op_return.rs  op_shl.rs  op_shr.rs  op_slash.rs  op_star.rs  op_uadd.rs  op_uminus.rs  op_unot.rs
duid-core/: Cargo.toml
duid-core/src/: lib.rs
duid-core/src/arena/: arena.rs  arena_iterator.rs  arena_node.rs  mod.rs  node_id.rs
duid-core/src/compiler/: mod.rs
duid-core/src/core/: mod.rs  user_app.rs  util.rs  window.rs
duid-core/src/core/duid_events/: command.rs  dispatch.rs  map_msg.rs  mod.rs  subscribe.rs
duid-core/src/core/events/: listener.rs  mod.rs
duid-core/src/core/html/: elements.rs  mod.rs  node.rs  node_helpers.rs  tags.rs
duid-core/src/core/html/attributes/: attribute.rs  attribute_macros.rs  attribute_value.rs  mod.rs  style.rs
duid-core/src/core/memory/: mod copy.rs  mod.rs
duid-core/src/core/networks/: grpc.rs  http.rs  mod.rs
duid-core/src/core/nodes/tags/: leaf.rs  mod.rs  node.rs
duid-core/src/core/nodes_to_be_remove/tags/: element.rs  tag.rs
duid-core/src/core/router/: mod.rs
duid-core/src/core/svg/: attributes.rs  mod.rs  tags.rs
duid-core/src/core/v_node/: mod.rs  view_builder.rs  virtual_node.rs
duid-core/src/dom/: apply_patches.rs  build_html_node.rs  mod.rs  patches.rs  patches_data.rs
duid-core/src/effects/: mod.rs
duid-core/src/engine/: mod.rs
duid-core/src/server/: mod.rs
duid-core/src/server/router/: duid_engine_route.rs  init_route.rs  mod.rs  response.rs  unknowned.rs
duid-core/src/tailwindcss_system/: mod.rs
duid-core/src/tailwindcss_system/builder/: build_style.rs  mod.rs  style_container.rs
duid-core/src/tailwindcss_system/themes/: mod.rs
duid-core/src/tailwindcss_system/themes/backgrounds/: background_attachment.rs  background_clip.rs  background_image.rs  background_origin.rs  background_position.rs  background_repeat.rs  background_size.rs  gradient_color_stops.rs  mod.rs
duid-core/src/tailwindcss_system/themes/base/: mod.rs
duid-core/src/tailwindcss_system/themes/borders/: border_radius.rs  border_style.rs  border_width.rs  divide_style.rs  divide_width.rs  mod.rs  outline_offset.rs  outline_style.rs  outline_width.rs  ring.rs  ring_offset_width.rs  ring_shadow.rs
duid-core/src/tailwindcss_system/themes/colors/: accent_colors.rs  background_colors.rs  border_colors.rs  box_shadow_colors.rs  caret_colors.rs  colors.rs  dark.rs  divide_colors.rs  light.rs  mod.rs  outline_colors.rs  ring_color.rs  ring_offset_color.rs  text_decoration_color.rs
duid-core/src/tailwindcss_system/themes/effects/: background_blend_mode.rs  box_shadow.rs  mix_blend_mode.rs  mod.rs  opacity.rs
duid-core/src/tailwindcss_system/themes/filters/: backdrop_blur.rs  backdrop_brightness.rs  backdrop_contrast.rs  backdrop_grayscale.rs  backdrop_hue_rotate.rs  backdrop_invert.rs  backdrop_opacity.rs  backdrop_saturate.rs  backdrop_sepia.rs  blur.rs  brightness.rs  contrast.rs  drop_shadow.rs  grayscale.rs  hue_rotate.rs  invert.rs  mod.rs  saturate.rs  sepia.rs
duid-core/src/tailwindcss_system/themes/flexbox_grid/: align_content.rs  align_items.rs  align_self.rs  flex.rs  flex_basis.rs  flex_direction.rs  flex_grow.rs  flex_shrink.rs  flex_wrap.rs  gap.rs  grid_auto_columns.rs  grid_auto_flow.rs  grid_auto_rows.rs  grid_column.rs  grid_row.rs  grid_template_columns.rs  grid_template_rows.rs  justify_content.rs  justify_items.rs  justify_self.rs  mod.rs  order.rs  place_content.rs  place_items.rs  place_self.rs
duid-core/src/tailwindcss_system/themes/interactivity/: appearance.rs  cursor.rs  mod.rs  pointer_events.rs  resize.rs  scroll_behavior.rs  scroll_margin.rs  scroll_padding.rs  scroll_snap_align.rs  scroll_snap_stop.rs  scroll_snap_type.rs  touch_action.rs  user_select.rs  will_change.rs
duid-core/src/tailwindcss_system/themes/layout/: aspect_ratio.rs  box_decoration_break.rs  box_sizing.rs  break_after.rs  break_before.rs  break_inside.rs  clear.rs  columns.rs  container.rs  display.rs  floats.rs  isolation.rs  mod.rs  object_fit.rs  object_position.rs  overflow.rs  overscroll_behavior.rs  position.rs  top_right_bottom_left.rs  visibility.rs  z_index.rs
duid-core/src/tailwindcss_system/themes/sizing/: height.rs  max_height.rs  max_width.rs  min_height.rs  min_width.rs  mod.rs  width.rs
duid-core/src/tailwindcss_system/themes/spacing/: margin.rs  mod.rs  padding.rs
duid-core/src/tailwindcss_system/themes/svg/: fill_colors.rs  mod.rs  stroke_colors.rs  stroke_width.rs
duid-core/src/tailwindcss_system/themes/tables/: border_collapse.rs  border_spacing.rs  mod.rs  table_layout.rs
duid-integrations/duid-core-test/: Cargo.toml  build.rs
duid-integrations/duid-core-test/src/: lib.rs
duid-integrations/duid-core-test/src/app/: page.rs
duid-integrations/duid-core-test/src/engine/: mod.rs
duid-integrations/duid-core-test/src/tools/: dev.rs  serve.rs
duid-tools/: Cargo.toml  README.md
duid-tools/src/: build.rs  deploy.rs  lib.rs  serve.rs
duid-tools/src/server/: mod.rs
duid-tools/src/server/router/: engine_routes.rs  init_route.rs  mod.rs  response.rs
src/: lib.rs
(+149 files in other folders)
