[package]
name = "duid-app"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
duid-core = {version = "0.1.0", path = "./duid-core"}

[workspace]
members = [
    "duid-core",
    "duid-data-grid",
    "duid-ui"
]

exclude = [
    "duid-engine",
    "duid-tools",
    "duid-design",
    "duid-integrations/duid-core-test"
]