[package]
name = "duid-app"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
duid-core = {version = "0.1.0", path = "./duid-core"}
duid-vm = {version = "0.1.0", path = "./duid-vm"}

[workspace]
members = [
    "duid-core",
    "duid-data-grid",
    "duid-ui",
    "duid-vm"
]

exclude = [
    "duid-tools",
    "duid-design",
    "duid-integrations/duid-core-test"
]