[package]
name = "binuid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "binuid"
path = "src/main.rs"
test = false

[[bin]]
name = "repl"
test = false

[features]
interpreter = []
vm = []



[dependencies]
duid-core = {version = "0.1.0", path = "../duid-core"}
pest = "2.1"
pest_derive = "2.1"
anyhow = "1.0"
rustyline = "12.0"
cfg-if = "1.0"
eq-float = "0.1"
