[package]
name = "duid-core-test"
version = "0.1.0"
authors = ["djedou <djedouarnaud.aman@gmail.com>"]
edition = "2021"


[lib]
crate-type = ["cdylib"]
name = "duid_engine"

[features]


[dependencies]
wasm-bindgen = "0.2"
duid-app = {version = "0.1.0", path="../../../duid-app"}
clap = {version = "4.0", features = ["derive", "cargo"]  }



[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
debug = true
lto = true
opt-level = "s"